--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -3,7 +3,11 @@ LanguageNotice.title,Hello There!,Hallo,¡Hola!,Salut!
 LanguageNotice.text,"We're experimenting with some initial support for national languages. We're in a very preliminary stage, but we hope to be able to support more languages, soon.","Wir experimentieren mit einer anfänglichen Unterstützung für Landessprachen. Wir befinden uns in einem sehr frühen Stadium, aber wir hoffen, bald weitere Sprachen unterstützen zu können.","Estamos experimentando con algún soporte inicial para los idiomas nacionales. Estamos en una etapa muy preliminar, pero esperamos poder soportar más idiomas, pronto.","Nous expérimentons un soutien initial pour les langues nationales. Nous sommes dans une phase très préliminaire, mais nous espérons être en mesure de prendre en charge plus de langues, bientôt."
 LanguageNotice.useEnglish,Use English instead,Englisch verwenden,Usar inglés,Utiliser l'anglais
 Lcars.copyright,STAR TREK and related marks and logos are trademarks of CBS Studios Inc. All Rights Reserved.,STAR TREK und zugehörige Marken und Logos sind Marken von CBS Studios Inc. Alle Rechte vorbehalten.,STAR TREK y las marcas y logotipos relacionados son marcas comerciales de CBS Studios Inc. Todos los derechos reservados.,STAR TREK et les marques et logos associés sont des marques commerciales de CBS Studios Inc. Tous droits réservés.
-Lcars.credits,Credits,Kredite,Créditos,Crédits
+Lcars.credits,Credits,Danksagungen,Créditos,Crédits
+Lcars.feedback,Feedback,,,
+Lcars.history,History,Verlauf,,
+Lcars.news,News,News,,
+Lcars.profile,Profile,Profil,,
 EraSelectionPage.sourceInstruction,Select sources. Ask your GM which are available.,"Wählen Sie Quellen aus. Fragen Sie Ihren GM, welche verfügbar sind.",Seleccione las fuentes. Pregúntele a su GM cuáles están disponibles.,Sélectionnez les sources. Demandez à votre MJ lesquels sont disponibles.
 EraSelectionPage.sourceNote,Some sources are not yet implemented; check back soon!,Einige Quellen sind noch nicht implementiert; Schauen Sie bald wieder vorbei!,Algunas fuentes aún no se han aplicado; ¡Vuelve pronto!,Certaines sources ne sont pas encore mises en œuvre; Revenez bientôt!
 EraSelectionPage.eraInstruction,Select which Era to play in. Ask your GM which Era to choose.,"Wählen Sie aus, in welcher Ära gespielt werden soll. Fragen Sie Ihren GM, welche Ära Sie wählen sollen.",Selecciona en qué Era jugar. Pregúntale a tu GM qué Era elegir.,Sélectionnez l'ère dans laquelle jouer. Demandez à votre MJ quelle ère choisir.
@@ -27,6 +31,11 @@ StarshipToolSelection.standardBuild,Standard Build,Standardausführung,Construcc
 StarshipToolSelection.standardBuildDescription,"The standard Starship creation process follows the build steps as outlined in the rulebooks. E.g.: starships choose a Spaceframe, Mission Profile, etc.","Der Standard-Raumschiff-Erstellungsprozess folgt den Build-Schritten, wie in den Regelwerken beschrieben. Z.B.: Raumschiffe wählen einen Spaceframe, ein Missionsprofil usw.","El proceso estándar de creación de Starship sigue los pasos de compilación descritos en los libros de reglas. Por ejemplo: las naves espaciales eligen un marco espacial, un perfil de misión, etc.","Le processus standard de création d'un Vaisseau suit les étapes de construction décrites dans les livres de règles. Par exemple: les vaisseaux spatiaux choisissent une trame spatiale, un profil de mission, etc."
 StarshipToolSelection.simplifiedBuild,Simplified Build,Vereinfachter Aufbau,Compilación simplificada,Construction simplifiée
 StarshipToolSelection.simplifiedBuildDescription,"The Simplified build is a good option for transcribing a set of stats, say from an online source or other other reference.","Der vereinfachte Build ist eine gute Option zum Transkribieren einer Reihe von Statistiken, Z. B. aus einer Online-Quelle oder einer anderen Referenz.","La compilación simplificada es una buena opción para transcribir un conjunto de estadísticas, por ejemplo, de una fuente en línea u otra referencia.","La version simplifiée est une bonne option pour transcrire un ensemble de statistiques, par exemple à partir d'une source en ligne ou d'une autre référence."
+ToolSelection.instruction,What do you want to create?,,,
+ToolSelection.mainCharacter,Main Character,Hauptfigur,Personaje principal,Personnage principal
+ToolSelection.supportingCharacter,Supporting Character,Nebencharakter,Personaje secundario,Personnage secondaire
+ToolSelection.starship,Starship,Sternenschiff,Nave estelar,Vaisseau spatial
+ToolSelection.spaceSector,Space Sector,Raumfahrtsektor,Sector espacial,Secteur spatial
 Common.button.select,Select,Auswählen,Escoger,Choisir
 Common.button.selectAll,Select All,Alle auswählen,Seleccionar todo,Sélectionner tout
 Common.button.selectNone,Select None,Wählen Sie Keine,Seleccionar Ninguno,Sélectionnez Aucun
@@ -64,22 +73,22 @@ Construct.other.traits,Traits,Charakterzüge,Rasgos,Traits
 Construct.other.upbringing,Upbringing,Erziehung,Cría,Education
 Construct.other.values,Values,Werte,Valores,Valeurs
 Construct.other.weapons,Weapons,Waffen,Armas,Armes
-Construct.attribute.control,Control,Steuerung,Control,Contrôle
-Construct.attribute.daring,Daring,Gewagt,Atrevido,Audace
-Construct.attribute.fitness,Fitness,Fitness,Aptitud,Forme Physique
-Construct.attribute.insight,Insight,Einblick,Visión,Perspicacité
-Construct.attribute.presence,Presence,Anwesenheit,Presencia,Présence
-Construct.attribute.reason,Reason,Grund,Razón,Raison
+Construct.attribute.control,Control,Kommando,Control,Contrôle
+Construct.attribute.daring,Daring,Flugkontrolle,Atrevido,Audace
+Construct.attribute.fitness,Fitness,Sicherheit,Aptitud,Forme Physique
+Construct.attribute.insight,Insight,Technik,Visión,Perspicacité
+Construct.attribute.presence,Presence,Wissenschaft,Presencia,Présence
+Construct.attribute.reason,Reason,Medizin,Razón,Raison
 Construct.discipline.command,Command,Befehl,Mandar,Commandement
 Construct.discipline.conn,Conn,Steuerung,Pilotaje,Pilotage
 Construct.discipline.security,Security,Sicherheit,Seguridad,Sécurité
 Construct.discipline.engineering,Engineering,Ingenieurwesen,Ingeniería,Ingénierie
 Construct.discipline.science,Science,Wissenschaft,Ciencia,Science
 Construct.discipline.medicine,Medicine,Medizin,Medicina,Médecine
-Construct.department.command,Command,Befehl,Mandar,Commandement
-Construct.department.conn,Conn,Steuerung,Pilotaje,Pilotage
+Construct.department.command,Command,Kommando,Mandar,Commandement
+Construct.department.conn,Conn,Flugkontrolle,Pilotaje,Pilotage
 Construct.department.security,Security,Sicherheit,Seguridad,Sécurité
-Construct.department.engineering,Engineering,Ingenieurwesen,Ingeniería,Ingénierie
+Construct.department.engineering,Engineering,Technik,Ingeniería,Ingénierie
 Construct.department.science,Science,Wissenschaft,Ciencia,Science
 Construct.department.medicine,Medicine,Medizin,Medicina,Médecine
 Construct.system.comms,Comms,Kommunikation,Comunicación,Communications
@@ -99,5 +108,6 @@ Page.title.systemGeneration,System Generation,Sternsystem-Generation,Generación
 Page.title.sectorDetails,Sector Details,Branchendetails,Detalles del sector,Détails du secteur
 Page.title.starSystemDetails,Star System Details,Details zum Sternensystem,Detalles del sistema Star,Détails du système stellaire
 Page.title.starshipToolSelection,Starship Tool Selection,Raumschiff-Werkzeuge,Herramientas de naves espaciales,Outils de vaisseau spatial
+Page.title.toolSelection,Tool Selection,,,
 Page.title.gamemasterTrackerPage,Tracking,Verfolgung,Seguimiento,Suivi
 Page.breadcrumb.characterCreation,Character Creation,Charaktererstellung,Creación de personajes,Création de personnages
