more translation of starship pages; support the idea that the translation files might have line breaks.

--- a/WebTools/src/i18n/locales/de/translations.json
+++ b/WebTools/src/i18n/locales/de/translations.json
@@ -58,9 +58,9 @@
     "Construct.other.crew": "Mannschaft",
     "Construct.other.departments": "Abteilungen",
     "Construct.other.disciplines": "Disziplinen",
-    "Construct.other.environment": "Umwelt",
-    "Construct.other.equipment": "Ausrüstung",
-    "Construct.other.focuses": "Konzentriert sich",
+    "Construct.other.environment": "Herkunft",
+    "Construct.other.equipment": "Sonstige Ausrüstung",
+    "Construct.other.focuses": "Fokusse",
     "Construct.other.missionProfile": "Missionsprofil",
     "Construct.other.name": "Name",
     "Construct.other.pronouns": "Pronomen",
@@ -74,25 +74,25 @@
     "Construct.other.spaceFrame": "Raumfachwerk",
     "Construct.other.specialRules": "Besondere Regeln",
     "Construct.other.species": "Spezies",
-    "Construct.other.stress": "Stress",
+    "Construct.other.stress": "Anstrengung",
     "Construct.other.systems": "Systeme",
-    "Construct.other.talents": "Begabungen",
+    "Construct.other.talents": "Talente",
     "Construct.other.traits": "Charakterzüge",
     "Construct.other.upbringing": "Erziehung",
-    "Construct.other.values": "Werte",
+    "Construct.other.values": "Überzeugungen",
     "Construct.other.weapons": "Waffen",
 
-    "Construct.attribute.control": "Kommando",
-    "Construct.attribute.daring": "Flugkontrolle",
-    "Construct.attribute.fitness": "Sicherheit",
-    "Construct.attribute.insight": "Technik",
-    "Construct.attribute.presence": "Wissenschaft",
-    "Construct.attribute.reason": "Medizin",
+    "Construct.attribute.control": "Konzentration",
+    "Construct.attribute.daring": "Wagemut",
+    "Construct.attribute.fitness": "Fitness",
+    "Construct.attribute.insight": "Gespür",
+    "Construct.attribute.presence": "Ausstrahlung",
+    "Construct.attribute.reason": "Verstand",
 
-    "Construct.discipline.command": "Befehl",
-    "Construct.discipline.conn": "Steuerung",
+    "Construct.discipline.command": "Kommando",
+    "Construct.discipline.conn": "Flugkontrolle",
     "Construct.discipline.security": "Sicherheit",
-    "Construct.discipline.engineering": "Ingenieurwesen",
+    "Construct.discipline.engineering": "Technik",
     "Construct.discipline.science": "Wissenschaft",
     "Construct.discipline.medicine": "Medizin",
 
