--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -27,6 +27,13 @@ AddCharacterView.errorMessage,This url does not look valid.,Diese URL sieht nich
 AddCharacterView.errorCharacterType,"Whoops! We only support characters, at the moment. Not starships.",Hoppla! Wir unterstützen im Moment nur Charaktere. Keine Raumschiffe.,"¡Gritos! Solo admitimos personajes, por el momento. No naves espaciales.","Nous ne supportons que les personnages, pour le moment. Pas des vaisseaux spatiaux."
 AddCharacterView.characterPrefix,Character:,Zeichen:,Carácter:,Personnage:
 CustomSpeciesDetails.speciesName,Name,,,
+CustomSpeciesDetails.instruction,What's the name of this species?,,,
+CustomSpeciesDetails.speciesTrait,Each species gets a species-specific trait that may provide additional benefits in special circumstances.,,,
+CustomSpeciesDetails.speciesNameWarning,Please provide a name for this species.,,,
+SpeciesDetails.options,Species Options,,,
+SpeciesDetails.selectThree,(Select three),,,
+SpeciesDetails.allowCrossSpecies,Allow cross-species talents (GM's decision),,,
+SpeciesDetails.allowEsoteric,Allow esoterric talents (GM's decision),,,
 StarshipToolSelection.instruction,Select an option,Wählen Sie eine Option,Seleccione una opción,Sélectionnez une option
 StarshipToolSelection.standardBuild,Standard Build,Standardausführung,Construcción estándar,Construction standard
 StarshipToolSelection.standardBuildDescription,"The standard Starship creation process follows the build steps as outlined in the rulebooks. E.g.: starships choose a Spaceframe, Mission Profile, etc.","Der Standard-Raumschiff-Erstellungsprozess folgt den Build-Schritten, wie in den Regelwerken beschrieben. Z.B.: Raumschiffe wählen einen Spaceframe, ein Missionsprofil usw.","El proceso estándar de creación de Starship sigue los pasos de compilación descritos en los libros de reglas. Por ejemplo: las naves espaciales eligen un marco espacial, un perfil de misión, etc.","Le processus standard de création d'un Vaisseau suit les étapes de construction décrites dans les livres de règles. Par exemple: les vaisseaux spatiaux choisissent une trame spatiale, un profil de mission, etc."
@@ -83,6 +90,7 @@ Construct.other.species,Species,Spezies,Especie,Espèce
 Construct.other.stress,Stress,Anstrengung,Estrés,Stress
 Construct.other.systems,Systems,Systeme,Sistemas,Systèmes
 Construct.other.talents,Talents,Talente,Talentos,Talents
+Construct.other.trait,Trait,,,
 Construct.other.traits,Traits,Charakterzüge,Rasgos,Traits
 Construct.other.upbringing,Upbringing,Erziehung,Cría,Education
 Construct.other.values,Values,Überzeugungen,Valores,Valeurs
