--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -77,6 +77,7 @@
     "Common.button.add": "Add",
     "Common.button.cancel": "Cancel",
     "Common.button.next": "Next",
+    "Common.button.view": "View",
 
     "Construct.other.assignment": "Assignment",
     "Construct.other.attributes": "Attributes",
