initial work on XML handling; - apply a bunch of German translations; - begin applying a step concept to the lifepath character creation

--- a/WebTools/src/i18n/locales/de/translations.json
+++ b/WebTools/src/i18n/locales/de/translations.json
@@ -1,20 +1,21 @@
 {
-    "LanguageNotice.title": "Hallo",
-    "LanguageNotice.text": "Wir experimentieren mit einer anfänglichen Unterstützung für Landessprachen. Wir befinden uns in einem sehr frühen Stadium, aber wir hoffen, bald weitere Sprachen unterstützen zu können.",
+    "LanguageNotice.title": "Hallo!",
+    "LanguageNotice.text": "Wir experimentieren mit einer grundlegenden Unterstützung für Landessprachen. Wir befinden uns in einem sehr frühen Stadium, aber wir hoffen, bald weitere Sprachen unterstützen zu können.",
     "LanguageNotice.useEnglish": "Englisch verwenden",
 
     "Lcars.copyright": "STAR TREK und zugehörige Marken und Logos sind Marken von CBS Studios Inc. Alle Rechte vorbehalten.",
     "Lcars.credits": "Danksagungen",
+    "Lcars.feedback": "Feedback",
     "Lcars.history": "Verlauf",
     "Lcars.news": "News",
     "Lcars.profile": "Profil",
 
-    "EraSelectionPage.sourceInstruction": "Wählen Sie Quellen aus. Fragen Sie Ihren GM, welche verfügbar sind.",
-    "EraSelectionPage.sourceNote": "Einige Quellen sind noch nicht implementiert; Schauen Sie bald wieder vorbei!",
-    "EraSelectionPage.eraInstruction": "Wählen Sie aus, in welcher Ära gespielt werden soll. Fragen Sie Ihren GM, welche Ära Sie wählen sollen.",
+    "EraSelectionPage.sourceInstruction": "Wählen Sie Quellen aus. Fragen Sie Ihren SL, welche verfügbar sind.",
+    "EraSelectionPage.sourceNote": "Einige Quellen sind noch nicht implementiert; schauen Sie bald wieder vorbei!",
+    "EraSelectionPage.eraInstruction": "Wählen Sie aus, in welcher Ära gespielt werden soll. Fragen Sie Ihren SL, welche Ära Sie wählen sollen.",
 
     "Home.selection": "Werkzeug auswählen.",
-    "Home.characterButton": "CHARAKTERE & RAUMSCHIFFE",
+    "Home.characterButton": "Charaktere & Raumschiffe",
     "Home.talentsButton": "Talente im Überblick",
 
     "ViewPage.viewSupportingCharacter": "Nebencharakter anzeigen",
@@ -23,62 +24,90 @@
     "ViewPage.errorMessage": "Die Dinge sind schrecklich, schrecklich schief gelaufen. Wir könnten uns im Spiegeluniversum befinden.",
     "ViewPage.unnamedStarship": "Unbenanntes Raumschiff",
 
-    "GMTracker.title": "Aufspürer",
-    "GMTracker.instruction": "Benutze dieses Tool, um verschiedene NPCs in deinem Spiel zu verwalten.",
+    "GMTracker.title": "NSC-Verwaltung",
+    "GMTracker.instruction": "Benutze dieses Tool, um verschiedene NSC in deinem Spiel zu verwalten.",
     "GMTracker.addCharacterModalTitle": "Charakter hinzufügen",
 
-    "AddCharacterView.instruction": "Fügen Sie die URL für ein Zeichen ein.",
+    "AddCharacterView.instruction": "Fügen Sie die URL für einen Charakter ein.",
     "AddCharacterView.errorMessage": "Diese URL sieht nicht gültig aus.",
     "AddCharacterView.errorCharacterType": "Hoppla! Wir unterstützen im Moment nur Charaktere. Keine Raumschiffe.",
-    "AddCharacterView.characterPrefix": "Zeichen:",
+    "AddCharacterView.characterPrefix": "Charakter:",
+
+    "CustomSpeciesDetails.speciesName": "Name",
+    "CustomSpeciesDetails.instruction": "Wie lautet der Name dieser Spezis?",
+    "CustomSpeciesDetails.speciesTrait": "Jede Spezies erhält ein bestimmtest Talent, das in bestimmten Situationen zusätzliche Vorteile verleihen kann.",
+    "CustomSpeciesDetails.speciesNameWarning": "Bitte einen Namen für diese Spezies angeben.",
+
+    "SpeciesDetails.options": "Spezies Optionen",
+    "SpeciesDetails.selectThree": "(drei wählen)",
+    "SpeciesDetails.allowCrossSpecies": "Spezis-übergreifende Talente erlauben (SL-Entscheid)",
+    "SpeciesDetails.allowEsoteric": "Esoterische Talente erlauben (SL-Entscheid)",
 
     "StarshipToolSelection.instruction": "Wählen Sie eine Option",
-    "StarshipToolSelection.standardBuild": "Standardausführung",
-    "StarshipToolSelection.standardBuildDescription": "Der Standard-Raumschiff-Erstellungsprozess folgt den Build-Schritten, wie in den Regelwerken beschrieben. Z.B.: Raumschiffe wählen einen Spaceframe, ein Missionsprofil usw.",
-    "StarshipToolSelection.simplifiedBuild": "Vereinfachter Aufbau",
-    "StarshipToolSelection.simplifiedBuildDescription": "Der vereinfachte Build ist eine gute Option zum Transkribieren einer Reihe von Statistiken, Z. B. aus einer Online-Quelle oder einer anderen Referenz.",
+    "StarshipToolSelection.standardBuild": "Standard Erstellung",
+    "StarshipToolSelection.standardBuildDescription": "Der Standardprozess zur Raumschiff-Erstellung folgt den Erstellungsschritten, wie in den Regelwerken beschrieben. Z.B.: Spaceframe auswählen, ein Missionsprofil usw.",
+    "StarshipToolSelection.simplifiedBuild": "Vereinfachte Erstellung",
+    "StarshipToolSelection.simplifiedBuildDescription": "Die vereinfachte Erstellung ist eine gute Option zum Übernehmen einer Reihe von Statistiken, z.B. aus einer Online-Quelle oder einer anderen Referenz.",
 
-    "ToolSelection.mainCharacter": "Hauptfigur",
+    "StarshipTypeSelection.campaignYear": "Kampagnenjahr",
+    "StarshipTypeSelection.instruction": "Was ist das aktuelle Jahr in der Kampagne? Das müsste im Zweifelsfalle der/die SL wissen. Eine Voreinstellung wird abhängig von der Ära der Kampagne automatisch eingetragen.",
+    "StarshipTypeSelection.year": "Jahr",
+    "StarshipTypeSelection.shipPolity": "Schiffstyp",
+    "StarshipTypeSelection.whatShipPolity": "Welcher Typ Raumschiff ist es?",
+    "StarshipTypeSelection.shipBuildType": "Schiffsgröße",
+    "StarshipTypeSelection.whatShipBuildType": "Welche Große hat das Schiff?",
+
+    "StarshipPage.whatScale": "Wie groß ist das Schiff?",
+    "StarshipPage.whatClass": "Wie lautet der Name der Schiffsklasse?",
+    "StarshipPage.whatYear": "In welchem Jahr ist diese Schiffsklasse in Dienst gestellt worden?",
+    "StarshipPage.class": "Klasse",
+
+    "ToolSelection.instruction": "Was soll erstellt werden?",
+    "ToolSelection.mainCharacter": "Hauptcharakter",
     "ToolSelection.supportingCharacter": "Nebencharakter",
-    "ToolSelection.starship": "Sternenschiff",
-    "ToolSelection.spaceSector": "Raumfahrtsektor",
+    "ToolSelection.starship": "Raumschiff",
+    "ToolSelection.spaceSector": "Raumsektor",
 
     "Common.button.select": "Auswählen",
     "Common.button.selectAll": "Alle auswählen",
-    "Common.button.selectNone": "Wählen Sie Keine",
-    "Common.button.exportJson": "Export nach JSON",
+    "Common.button.selectNone": "Nichts auswählen",
+    "Common.button.exportJson": "Als JSON exportieren",
     "Common.button.exportPdf": "Als PDF exportieren",
-    "Common.button.ok": "Okay",
+    "Common.button.ok": "OK",
     "Common.button.add": "Hinzufügen",
     "Common.button.cancel": "Abbrechen",
-    "Common.button.next": "Nächster",
+    "Common.button.next": "Weiter",
+    "Common.button.view": "Anzeigen",
 
     "Construct.other.assignment": "Zuweisung",
     "Construct.other.attributes": "Attribute",
-    "Construct.other.crew": "Mannschaft",
+    "Construct.other.crew": "Crew",
     "Construct.other.departments": "Abteilungen",
+    "Construct.other.determination": "Entschlossenheit",
     "Construct.other.disciplines": "Disziplinen",
     "Construct.other.environment": "Herkunft",
-    "Construct.other.equipment": "Sonstige Ausrüstung",
+    "Construct.other.equipment": "Ausrüstung",
     "Construct.other.focuses": "Fokusse",
     "Construct.other.missionProfile": "Missionsprofil",
     "Construct.other.name": "Name",
     "Construct.other.pronouns": "Pronomen",
-    "Construct.other.power": "Macht",
+    "Construct.other.power": "Energie",
     "Construct.other.rank": "Rang",
-    "Construct.other.refits": "Umbauten",
+    "Construct.other.refits": "Nachrüstungen",
     "Construct.other.resistance": "Widerstand",
-    "Construct.other.scale": "Maßstab",
-    "Construct.other.serviceDate": "Service-Datum",
+    "Construct.other.scale": "Schiffsgröeße",
+    "Construct.other.serviceDate": "Indienststellung",
     "Construct.other.shields": "Schilde",
-    "Construct.other.spaceFrame": "Raumfachwerk",
+    "Construct.other.spaceFrame": "Schiffsklasse",
     "Construct.other.specialRules": "Besondere Regeln",
     "Construct.other.species": "Spezies",
     "Construct.other.stress": "Anstrengung",
     "Construct.other.systems": "Systeme",
     "Construct.other.talents": "Talente",
-    "Construct.other.traits": "Charakterzüge",
+    "Construct.other.trait": "Merkmal",
+    "Construct.other.traits": "Merkmale",
     "Construct.other.upbringing": "Erziehung",
+    "Construct.other.value": "Überzeugung",
     "Construct.other.values": "Überzeugungen",
     "Construct.other.weapons": "Waffen",
 
@@ -105,23 +134,39 @@
 
     "Construct.system.comms": "Kommunikation",
     "Construct.system.computer": "Computer",
-    "Construct.system.engines": "Motoren",
+    "Construct.system.engines": "Antrieb",
     "Construct.system.sensors": "Sensoren",
-    "Construct.system.structure": "Struktur",
+    "Construct.system.structure": "Hülle",
     "Construct.system.weapons": "Waffen",
 
     "Page.title.home": "Homepage",
     "Page.title.era": "Ära",
     "Page.title.talentsOverview": "Talente im Überblick",
-    "Page.title.creditsPage": "Kredite",
-    "Page.title.viewSheet": "Blatt anzeigen",
+    "Page.title.creditsPage": "Danksagungen",
+    "Page.title.finish": "Feinschliff",
+    "Page.title.customSpeciesDetails": "Details einer eigenen Spezies",
+    "Page.title.viewSheet": "Bogen anzeigen",
     "Page.title.supportingCharacter": "Nebencharakter",
-    "Page.title.characterType": "Zeichentyp",
-    "Page.title.systemGeneration": "Sternsystem-Generation",
-    "Page.title.sectorDetails": "Branchendetails",
+    "Page.title.characterType": "Charakter-Typ",
+    "Page.title.systemGeneration": "Sternsystem-Erstellung",
+    "Page.title.sectorDetails": "Sektor Details",
     "Page.title.starSystemDetails": "Details zum Sternensystem",
-    "Page.title.starshipToolSelection": "Raumschiff-Werkzeuge",
-    "Page.title.gamemasterTrackerPage": "Verfolgung",
+    "Page.title.starshipToolSelection": "Werkzeug-Auswahl Raumschiff",
+    "Page.title.toolSelection": "Werkzeug-Auswahl",
+    "Page.title.gamemasterTrackerPage": "NSC-Verwaltung",
+    "Page.title.customSpaceframe": "Eigene Klasse erstellen",
+    "Page.title.finalStarshipDetails": "Letzte Raumschiff-Details",
+    "Page.title.missionPodSelection": "Auswahl Missionspod",
+    "Page.title.missionProfileSelection": "Auswahl Missionsprofil",
+    "Page.title.missionProfileTalentSelection": "Auswahl Missionsprofil-Talent",
+    "Page.title.simpleStarship": "Vereinfachte Raumschifferstellung",
+    "Page.title.smallCraftStats": "Begleitschiff-Werte",
+    "Page.title.spaceframeOption": "Schiffsklassen-Optionen",
+    "Page.title.spaceframeSelection": "Schiffsklasse",
+    "Page.title.starshipTalentSelection": "Raumschiff Talente",
+    "Page.title.starshipTypeSelection": "Raumschiff-Typ",
+    "Page.title.starshipWeaponsSelection": "Schiffswaffen",
 
-    "Page.breadcrumb.characterCreation": "Charaktererstellung"
+    "Page.breadcrumb.characterCreation": "Charaktererstellung",
+    "Page.breadcrumb.starshipCreation": "Raumschifferstellung"
 }
