additional changes to support more translation

--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -151,3 +151,35 @@ Page.title.starshipTypeSelection,Starship Type,Raumschiff-Typ,,
 Page.title.starshipWeaponsSelection,Starship Weapons,Schiffswaffen,,
 Page.breadcrumb.characterCreation,Character Creation,Charaktererstellung,Creación de personajes,Création de personnages
 Page.breadcrumb.starshipCreation,Starship Creation,Raumschifferstellung,,
+Source.type.coreBook,Core Rulebooks,,,
+Source.type.divisionBook,Division Books,,,
+Source.type.quadrantBook,Quadrant Books,,,
+Source.type.crewBook,Crew Books,,,
+Source.type.campaignBook,Campaign Books,,,
+Source.type.expansion,Major Expansion Books,,,
+Source.type.misc,Misc/Other Books,,,
+Source.book.core,Core,,,
+Source.book.alphaQuadrant,Alpha Quadrant,,,
+Source.book.betaQuadrant,Beta Quadrant,,,
+Source.book.gammaQuadrant,Gamma Quadrant,,,
+Source.book.deltaQuadrant,Delta Quadrant,,,
+Source.book.commandDivision,Command Division,,,
+Source.book.operationsDivision,Operations Division,,,
+Source.book.sciencesDivision,Sciences Division,,,
+Source.book.tng,TNG,,,
+Source.book.ds9,DS9,,,
+Source.book.voyager,Voyager,,,
+Source.book.theseAreTheVoyages,These are the Voy,,,
+Source.book.tribblePlayerCharacter,Tribble Player Char,,,
+Source.book.klingonCore,Klingon Core,,,
+Source.book.shackletonExpanse,Shackleton Expanse,,,
+Source.book.idwYearFive,IDW Year Five,,,
+Source.book.playersGuide,Player's Guide,,,
+Source.book.tricorderSet,Tricorder Set,,,
+Source.book.discoveryS1S2,Discovery S1/S2,,,
+Source.book.discoveryCampaign,Picard S1,,,
+Source.book.picardS1,Discovery Campaign,,,
+Source.book.utopiaPlanitia,Utopia Planitia,,,
+Era.name.enterprise,Enterprise (22nd century),,,
+Era.name.originalSeries,Original Series (23rd century),,,
+Era.name.nextGeneration,Next Generation (24th century),,,
